5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1715_3031.log
== TEST (2019-05-02 16:09:35) 
-- CODE:
fx = float(input("Valor de x: "))

if (fx<= 1):
	print(1)
elif (fx > 1 and fx <= 2):
	print(2)
elif (fx > 2 and fx <= 3):
	print(fx**2)
else:
	print(fx**3)

-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:09:44) 
-- CODE:
fx = float(input("Valor de x: "))

if (fx<= 1):
	print(1)
elif (fx > 1 and fx <= 2):
	print(2)
elif (fx > 2 and fx <= 3):
	print(fx**2)
else:
	print(fx**3)

-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:09:52) 
-- CODE:
fx = float(input("Valor de x: "))

if (fx<= 1):
	print(1)
elif (fx > 1 and fx <= 2):
	print(2)
elif (fx > 2 and fx <= 3):
	print(fx**2)
else:
	print(fx**3)

-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:10:01) 
-- CODE:
fx = float(input("Valor de x: "))

if (fx<= 1):
	print(1)
elif (fx > 1 and fx <= 2):
	print(2)
elif (fx > 2 and fx <= 3):
	print(fx**2)
else:
	print(fx**3)

-- EXECUTION TIME:
0.158125
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.656000000000006
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:10:55) 
-- CODE:
fx = float(input("Valor de x: "))

if (fx<= 1):
	print(1)
elif (fx > 1 and fx <= 2):
	print(2)
elif (fx > 2 and fx <= 3):
	print(fx**2)
elif (fx > 3):
	print(fx**3)
	

-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:12:01) 
-- CODE:
fx = float(input("Valor de x: "))

if (fx<= 1):
	print(1)
elif (fx > 1 and fx <= 2):
	print(2)
elif (fx > 2 and fx <= 3):
	print(round(fx**2))
elif (fx > 3):
	print(round(fx**3))
	

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:12:08) 
-- CODE:
fx = float(input("Valor de x: "))

if (fx<= 1):
	print(1)
elif (fx > 1 and fx <= 2):
	print(2)
elif (fx > 2 and fx <= 3):
	print(round(fx**2))
elif (fx > 3):
	print(round(fx**3))
	

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:12:42) 
-- CODE:
fx = float(input("Valor de x: "))

if (fx<= 1):
	print(1)
elif (fx > 1 and fx <= 2):
	print(2)
elif (fx > 2 and fx <= 3):
	print(round(fx**2))
elif (fx > 3):
	print(round(fx**3))
	

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:13:04) 
-- CODE:
fx = float(input("Valor de x: "))

if (fx<= 1):
	print(1)
elif (fx > 1 and fx <= 2):
	print(2)
elif (fx > 2 and fx <= 3):
	print((fx**2)
elif (fx > 3):
	print(round(fx**3))
	

-- ERROR:
File "XXXX", line 9
    elif (fx > 3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:13:09) 
-- CODE:
fx = float(input("Valor de x: "))

if (fx<= 1):
	print(1)
elif (fx > 1 and fx <= 2):
	print(2)
elif (fx > 2 and fx <= 3):
	print(fx**2)
elif (fx > 3):
	print(round(fx**3))
	

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:13:36) 
-- CODE:
fx = float(input("Valor de x: "))

if (fx<= 1):
	print(1)
elif (fx > 1 and fx <= 2):
	print(2)
elif (fx > 2 and fx <= 3):
	print(round(fx**2,2))
elif (fx > 3):
	print(round(fx**3,2))
	

-- EXECUTION TIME:
0.150067
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.66
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
